[gd_scene load_steps=6 format=3 uid="uid://ws238pcw35mn"]

[ext_resource type="Script" path="res://NPCs/GarekFinish.gd" id="1_56gxi"]
[ext_resource type="PackedScene" uid="uid://dr4xh7g0ik0yx" path="res://dialogue/dialogue.tscn" id="2_j3om2"]
[ext_resource type="Texture2D" uid="uid://fs200knx54is" path="res://assets/characters/Garek.png" id="2_suo70"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a3eec"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ixx7f"]
radius = 22.0

[node name="GarekFinish" type="Area2D"]
script = ExtResource("1_56gxi")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_suo70")

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_a3eec")

[node name="GarekFinishDialogue" parent="chat_detection_area" instance=ExtResource("2_j3om2")]
offset_left = -79.0
offset_top = -140.0
offset_right = -39.0
offset_bottom = -100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_ixx7f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="dialogue_finished" from="chat_detection_area/GarekFinishDialogue" to="." method="_on_garek_finish_dialogue_dialogue_finished"]
